--- a/.github/workflows/test-build-and-release.yml
+++ b/.github/workflows/test-build-and-release.yml
@@ -17,21 +17,31 @@ jobs:
       - name: Testing with check
         run: |
           ./check_operations
+  static-test:
+    name: Static code analysis
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup splint
+        run: sudo apt-get update && sudo apt-get install splint
+      - name: Run splint
+        run: |
+          splint --compdef --exportlocal simplecalculator.c operations.c
   building-and-delivery:
     name: Build and delivery
     permissions:
       contents: write
-    needs: [unit-test]
+    needs: [unit-test, static-test]
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Building
         run: |
+          echo "D10QTW" > neptun.txt
           gcc operations.c simplecalculator.c -o simplecalculator
       - name: Creating tar.gz
         run: |
-          tar -czvf simplecalculator.tar.gz simplecalculator
+          tar -czvf simplecalculator.tar.gz simplecalculator neptun.txt
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
