--- a/.github/workflows/test-build-and-release.yml
+++ b/.github/workflows/test-build-and-release.yml
@@ -21,6 +21,8 @@ jobs:
     name: Static code analysis
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
       - name: Setup splint
         run: sudo apt-get update && sudo apt-get install splint
       - name: Run splint
